html mostly done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    
+    <main id="main-doc">
+       <section class="main-section" id="promises">
+           <header><h1></h1>Promises</h1></header>
+       </section>
+       <section class="main-section" id="async">
+           <header><h1></h1>Async</h1></header>
+       </section>
+       <section class="main-section" id="await">
+           <header><h1></h1>Await</h1></header>
+       </section>
+       <section class="main-section" id="error_handling">
+           <header><h1></h1>Error Handling</h1></header>
+       </section>
+       <section class="main-section" id="summary">
+           <header><h1></h1>Summary</h1></header>
+       </section>
+
+       <nav id="navbar">
+           <header>
+               <h2>Navigation</h2>
+           </header>
+            <a href="#promises" class="nav-link">Promise</a>
+            <a href="#async" class="nav-link">Async</a>
+            <a href="#await" class="nav-link">Await</a>
+            <a href="#error_handling" class="nav-link">Error Handling</a>
+            <a href="#summary" class="nav-link">Summary</a>
+       </nav>
 </body>
 </html>
