changed promise to promises

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2>Navigation</h2>
     </header>
     <ul id="navList" class="nav-list">
-      <li><a href="#promises" class="nav-link">Promise</a></li>
+      <li><a href="#promises" class="nav-link">Promises</a></li>
       <li><a href="#async" class="nav-link">Async</a></li>
       <li><a href="#await" class="nav-link">Await</a></li>
       <li><a href="#error_handling" class="nav-link">Error Handling</a></li>
